--- a/Basic JavaScript Projects/Project6_ternary__operators_constructors/index.html
+++ b/Basic JavaScript Projects/Project6_ternary__operators_constructors/index.html
@@ -4,7 +4,17 @@
         <script src="./JS/main.js"></script>
     </head>
     <body>
+        <p>Riders must be at least 52 centimeters tall to ride.</p>
+        <input id = "Height" value = "52" />
+        <button onclick="Ride_Function()">Click Here</button>
+        <p id="Ride"></p>
+    </br>
+    </br>
+        <p>Who's Vehicle do you want to know about?</p>
+        <input type="text" id="person" />
         <button onclick="myFunction()">Click Here</button>
         <p id="Keywords_and_Constructors"></p>
+
+        <p id="Counting" onclick="count_Function()">Click me!</p>
     </body>
 </html>
