finished project 10 for javascript

--- a/Basic JavaScript Projects/Project10_loops_arrays/index.html
+++ b/Basic JavaScript Projects/Project10_loops_arrays/index.html
@@ -25,6 +25,12 @@
         <button onclick="return_Function()">Return!</button>
         <p id="return"></p>
     <br>
+        <button onclick="testBreak()">Break me!</button>
+        <p id="break"></p>
+    <br>
+        <p id="continue">Continue Statement out puts to console</p>
+    <br>
+        
 
     </body>
 </html>
